<resources>
    <string name="app_name">SensorDC</string>
    <string name="t1ambient">Temperature 1</string>
    <string name="t2_ambient">Temperature 2</string>
    <string name="v1_ambient">Voltage 1</string>
    <string name="v2_ambient">Voltage 2</string>
    <string name="t1_battery">Temperature 1</string>
    <string name="t2_battery">Temperature 2</string>
    <string name="v1_battery">Voltage 1</string>
    <string name="v2_battery">Voltage 2</string>
    <string name="save">Save</string>
    <string name="battery">Battery</string>
    <string name="ambient">Ambient</string>
    <string name="lastupdate">Latest Update</string>
    <string name="codeversion">Code Version</string>
    <string name="gps">GPS (lat, long, acc)</string>
    <string name="dischargecurrent">Discharge Current</string>
    <string name="chargingcurrent">Charging Current</string>
    <string name="voltage">Voltage</string>
    <string name="acceleration">Acceleration\n(x,y,z)</string>
    <string name="rotation">Rotation\n(x,y,z,r)</string>
    <string name="temperature">Temperature\n(box, ambient)</string>
    <string name="debug">Debug screen</string>

</resources>
