<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settings"
            type="com.sensordc.Settings"/>
    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context="com.sensordc.MainActivity"
        tools:ignore="MergeRootFrame">

        <TextView
            android:id="@+id/ambient_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:labelFor="@+id/ambient"
            android:text="@string/ambient"/>


        <LinearLayout
            android:id="@+id/ambient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ambient_label"
            android:orientation="vertical">

            <RelativeLayout style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/t1ambient"
                    android:text="@string/t1ambient"/>

                <EditText
                    android:id="@+id/t1ambient"
                    style="@style/Input"
                    android:text="@={settings.t1ambient.valueString}"/>
            </RelativeLayout>

            <RelativeLayout style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/t2ambient"
                    android:text="@string/t2_ambient"/>

                <EditText
                    android:id="@+id/t2ambient"
                    style="@style/Input"
                    android:text="@={settings.t2ambient.valueString}"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/v1ambient"
                    android:text="@string/v1_ambient"/>

                <EditText
                    android:id="@+id/v1ambient"
                    style="@style/Input"
                    android:text="@={settings.v1ambient.valueString}"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/v2ambient"
                    android:text="@string/v2_ambient"/>

                <EditText
                    android:id="@+id/v2ambient"
                    style="@style/Input"
                    android:text="@={settings.v2ambient.valueString}"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/battery_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ambient"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/battery"
            android:text="@string/battery"/>

        <LinearLayout
            android:id="@+id/battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/t1battery"
                    android:text="@string/t1_battery"/>

                <EditText
                    android:id="@+id/t1battery"
                    style="@style/Input"
                    android:text="@={settings.t1battery.valueString}"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/t2battery"
                    android:text="@string/t2_battery"/>

                <EditText
                    android:id="@+id/t2battery"
                    style="@style/Input"
                    android:text="@={settings.t2battery.valueString}"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/v1battery"
                    android:text="@string/v1_battery"/>

                <EditText
                    android:id="@+id/v1battery"
                    style="@style/Input"
                    android:text="@={settings.v1battery.valueString}"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/SettingRow">

                <TextView
                    style="@style/InputLabel"
                    android:labelFor="@+id/v2battery"
                    android:text="@string/v2_battery"/>

                <EditText
                    android:id="@+id/v2battery"
                    style="@style/Input"
                    android:text="@={settings.v2battery.valueString}"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/battery"
            android:text="@{settings.buildVersion}"/>

        <Button
            android:id="@+id/debugbutton"
            style="@style/DebugButton"
            android:onClick="clickDebug"
            android:text="@string/debug"/>

        <Button
            android:id="@+id/savebutton"
            style="@style/SaveButton"
            android:onClick="clickSave"
            android:text="@string/save"/>
    </RelativeLayout>
</layout>